newtype-tools/tests/newtype-fail/struct.rs
use newtype_tools::Newtype;

#[derive(Newtype)]
struct Oranges {
    inner: u32,
}

fn main() {}
